@@ -216,5 +216,12 @@
             <artifactId>log4j-1.2-api</artifactId>
             <version>${log4j.veriosn}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-runtime -->
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-runtime</artifactId>
+            <version>2.1.6</version>
+        </dependency>
     </dependencies>
 </project>
